[project]
name = "steamer"
version = "0.1.0"
description = "a single cell analysis pipeline"
authors = [
    {name = "Andrew Robbins", email = "robbiand@umich.edu"},
    {name = "Crystal Wen", email = "mccwen@umich.edu"},
]
dependencies = [
    "scanpy>=1.9.8",
    "pybedtools>=0.9.1",
    "fuc>=0.37.0",
    "setuptools>=69.1.1",
    "typer>=0.9.0",
    "kb-python",
    "ALLCools>=1.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.scripts]
run_steamer = "steamer.run_steamer:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pandas-stubs>=2.2.2.240603",
]
