[project]
name = "steamer"
version = "0.1.0"
description = "a single cell analysis pipeline"
authors = [
    {name = "Andrew Robbins", email = "robbiand@umich.edu"},
    {name = "Crystal Wen", email = "mccwen@umich.edu"},
]
dependencies = [
    "scanpy @ git+https://github.com/scverse/scanpy.git@1.10.x",
    "pybedtools>=0.9.1",
    "fuc @ git+https://github.com/sbslee/fuc.git@0.39.0-dev",
    "setuptools>=69.1.1",
    "typer>=0.9.0",
    "kb-python",
    "ALLCools>=1.1.0",
    "dask>=2024.6.2",
    "zarr>=2.18.2",
    "sparse>=0.15.4",
    "numpy>=2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.scripts]
run_steamer = "steamer.run_steamer:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pandas-stubs>=2.2.2.240603",
]
