[project]
name = "steamer"
version = "0.1.0"
description = "a single cell analysis pipeline"
authors = [
    {name = "Andrew Robbins", email = "robbiand@umich.edu"},
    {name = "Crystal Wen", email = "mccwen@umich.edu"},
]
dependencies = [
    "scanpy >= 1.10",
    "pybedtools>=0.9.1",
    "fuc >=0.38",
    "setuptools>=69.1.1",
    "typer>=0.9.0",
    "kb-python",
    "allcools @ git+https://github.com/theAeon/ALLCools@tabix-create",
    "dask>=2024.6.2",
    "zarr>=2.18.2",
    "sparse>=0.15.4",
    "pysam @ git+https://github.com/theAeon/pysam.git@gcloud_auth",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.scripts]
run_steamer = "steamer.run_steamer:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pandas-stubs>=2.2.2.240603",
]
